longhorn/templates/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: longhorn-soh-re-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - longhorn.soh.re
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: longhorn-soh-re-tls
      mode: SIMPLE
  - hosts:
    - longhorn.soh.re
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: false
