longhorn/templates/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn-virtualservice
spec:
  hosts:
  - "longhorn.soh.re"
  gateways:
  - istio-system/http-gateway
  http:
  - route:
    - destination:
        host: longhorn-frontend.longhorn.svc.cluster.local
        port:
          number: 80
